final code clean up

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+# normally this file would be added to the .gitignore file so that it is not uploaded to github
+# but for the sake of this project, I have left it in
+
 USERNAME = phrasee03@gmail.com
 PASSWORD = O64ro%OaDFAMnkBZ
